--- a/packages/tools/src/pages/Index/index.sass
+++ b/packages/tools/src/pages/Index/index.sass
@@ -15,13 +15,14 @@
   list-style: none
 
 .navItem
-  margin: 0 48px 48px
+  width: 140px
+  margin: 0 28px 28px
 
 .navLink
   display: block
+  margin: 0 auto 8px
   width: 100px
   height: 100px
-  margin-bottom: 8px
   font-size: 60px
   line-height: 100px
   border-radius: 8px
@@ -44,3 +45,6 @@
 
 .colorLime
   background-color: $lime
+
+.colorGold
+  background-color: $gold
